[ADD] Navbar and Hero section finished,

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,2 +1,4 @@
 @use "../styles/normalize";
 @use "../styles/components/Navbar.scss";
+@use "../styles/components/Hero.scss";
+@use "../styles/components/Slider.scss";
