--- a/src/styles/components/Navbar.scss
+++ b/src/styles/components/Navbar.scss
@@ -3,13 +3,46 @@
 
 .navbar {
   width: 100%;
-  max-width: vars.$max-width;
   height: vars.$nav-height;
 
-  background-color: vars.$clr-primary;
-
-  @include mixins.flexy();
+  background-color: vars.$clr-white;
 
   padding-inline: vars.$padding-x;
-  margin: 0 auto;
+}
+
+.navbar__wrapper {
+  // max-width: vars.$max-width;
+  height: 100%;
+  // margin-inline: auto;
+
+  @include mixins.flexy(space-between, center);
+}
+
+.navbar__wrapper > * {
+  @include mixins.flexy(center, center);
+  gap: vars.$gutter-s;
+}
+
+.navbar__logo {
+  font-size: vars.$fs-2;
+}
+
+.navbar__link {
+  font-size: vars.$fs-0;
+  color: vars.$clr-black;
+
+  @include mixins.my_transition(color);
+}
+
+.navbar__link:hover {
+  color: vars.$clr-primary;
+}
+
+.navbar__iconsContainer {
+  @include mixins.flexy(center, center);
+  gap: vars.$gutter-m;
+}
+
+.navbar__icon {
+  font-size: vars.$fs-1;
 }
