[ADD] Border radius to the button new arrivals.

--- a/src/styles/components/Hero.scss
+++ b/src/styles/components/Hero.scss
@@ -43,6 +43,7 @@
   color: vars.$clr-white;
   font-size: vars.$fs-3;
   border: 2px solid vars.$clr-white;
+  border-radius: vars.$border-radius;
   padding-inline: vars.$gutter-m;
   text-transform: uppercase;
   cursor: pointer;
