[UPDATE] Color Palette.

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,8 +1,7 @@
 // Colors
-
-$clr-white: #fafafa;
+$clr-white: #f9f4e8;
 $clr-black: #212121;
-$clr-primary: #bb9457;
+$clr-primary: #a17c59;
 $clr-secondary: #fe4a49; //#6c969d
 
 // Transitions
@@ -33,11 +32,9 @@ $nav-height: 4.5rem;
 $max-width: 1440px;
 
 // Shadows
-
 $shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
 $shadow-active: 0 20px 25px -5px rgb(0 0 0 / 0.1),
   0 8px 10px -6px rgb(0 0 0 / 0.1);
 
 // Borders
-
 $border-radius: 0.2rem;
