--- a/src/styles/components/Slider.scss
+++ b/src/styles/components/Slider.scss
@@ -16,7 +16,7 @@ $carousel__number-of-items: 6;
   @include mixins.flexy(center, center);
   gap: vars.$gutter-m;
   overflow: hidden;
-  background-color: #f0f0f0;
+  background-color: hsl(33, 34%, 87%);
 
   mask-image: linear-gradient(
     to right,
