--- a/src/styles/components/Navbar.scss
+++ b/src/styles/components/Navbar.scss
@@ -5,7 +5,7 @@
   width: 100%;
   height: vars.$nav-height;
 
-  background-color: vars.$clr-white;
+  background-color: vars.$clr-cream;
 
   padding-inline: vars.$padding-x;
 }
