--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -3,6 +3,8 @@
 @use "../styles/components/Navbar.scss";
 @use "../styles/components/Hero.scss";
 @use "../styles/components/Slider.scss";
+@use "../styles/components/ProductCard.scss";
+@use "../styles/components/TrendingProducts.scss";
 
 /* total width */
 body::-webkit-scrollbar {
