--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,7 @@
 // Colors
 $clr-white: #fbf7ef;
 $clr-cream: #f9f4e8;
+$clr-gray: #e9dfd3;
 $clr-black: #212121;
 $clr-primary: #a17c59;
 $clr-secondary: #fe4a49; //#6c969d
