--- a/src/styles/components/Home/Hero.scss
+++ b/src/styles/components/Home/Hero.scss
@@ -1,5 +1,5 @@
-@use "../variables" as vars;
-@use "../mixins" as mixins;
+@use "../../variables" as vars;
+@use "../../mixins" as mixins;
 
 .hero {
   position: relative;
