--- a/src/styles/components/Home/Slider.scss
+++ b/src/styles/components/Home/Slider.scss
@@ -1,5 +1,5 @@
-@use "../variables" as vars;
-@use "../mixins" as mixins;
+@use "../../variables" as vars;
+@use "../../mixins" as mixins;
 
 $carousel__item--width: 240px;
 $carousel__item--height: 100px;
