[ADD] Testimonials import.

--- a/src/styles/_imports/_home.scss
+++ b/src/styles/_imports/_home.scss
@@ -1,3 +1,4 @@
 @use "../components/Home/Hero.scss";
 @use "../components/Home/Slider.scss";
 @use "../components/Home/TrendingProducts.scss";
+@use "../components/Home/Testimonials.scss";
