[UPDATE] Bg-color for subscribe input.

--- a/src/styles/components/SharedLayout/Footer.scss
+++ b/src/styles/components/SharedLayout/Footer.scss
@@ -10,6 +10,10 @@
   width: 100%;
 
   @include mixins.flexy(space-between, center);
+
+  input {
+    background-color: vars.$clr-white;
+  }
 }
 
 .footer :not(h2):not(h3):not(.footer__dev):not(.footer__author) {
