[ADD] Margin block between sections.

--- a/src/styles/components/Home/TrendingProducts.scss
+++ b/src/styles/components/Home/TrendingProducts.scss
@@ -1,7 +1,7 @@
 @use "../../variables" as vars;
 
 .trending {
-  margin-block: vars.$gutter-l;
+  margin-block: vars.$gutter-2xl;
   padding-inline: vars.$padding-x;
 }
 
