[DONE] Landing page.

--- a/src/styles/_imports/_home.scss
+++ b/src/styles/_imports/_home.scss
@@ -2,3 +2,4 @@
 @use "../components/Home/Slider.scss";
 @use "../components/Home/TrendingProducts.scss";
 @use "../components/Home/Testimonials.scss";
+@use "../components/Home/Benefits.scss";
