--- a/src/styles/components/SharedLayout/Footer.scss
+++ b/src/styles/components/SharedLayout/Footer.scss
@@ -8,6 +8,7 @@
   padding-inline: vars.$padding-x;
 
   width: 100%;
+  height: vars.$footer-height;
 
   @include mixins.flexy(space-between, center);
 
