--- a/src/styles/components/SharedLayout/Footer.scss
+++ b/src/styles/components/SharedLayout/Footer.scss
@@ -25,7 +25,7 @@
 }
 
 .footer__socials {
-  @include mixins.flexy(start);
+  @include mixins.flexy(flex-start);
   gap: vars.$gutter-s;
 
   a {
@@ -78,7 +78,7 @@
 @media (width <= 768px) {
   .footer {
     flex-direction: column;
-    align-items: start;
+    align-items: flex-start;
 
     gap: vars.$gutter-s;
   }
