[ADD] Initial Structure for Login and Register pages.

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -4,6 +4,7 @@
 @use "../styles/components/SharedLayout/Footer.scss";
 @use "../styles/_imports/home.scss";
 @use "../styles/_imports/about.scss";
+@use "../styles/_imports/account.scss";
 @use "../styles/components/ProductCard.scss";
 @use "../styles/components/SectionTitle.scss";
 
