--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,7 +3,7 @@ $clr-white: hsl(40, 60%, 97%);
 $clr-cream: #f9f4e8;
 $clr-gray: #e9dfd3;
 $clr-black: #212121;
-$clr-primary: #a17c59;
+$clr-primary: hsl(29, 29%, 45%);
 $clr-secondary: hsl(39, 59%, 15%); //#6c969d
 $clr-error: #fe4a49; //#6c969d
 
