--- a/src/styles/components/SharedLayout/Navbar.scss
+++ b/src/styles/components/SharedLayout/Navbar.scss
@@ -27,6 +27,7 @@
   font-size: vars.$fs-2;
   font-weight: 500;
   letter-spacing: -1px;
+  color: vars.$clr-secondary;
 }
 
 .navbar__link {
@@ -41,12 +42,45 @@
 }
 
 .navbar__iconsContainer {
-  @include mixins.flexy(center, center);
+  // @include mixins.flexy(center, center);
   gap: vars.$gutter-m;
 }
 
-.navbar__icon {
-  font-size: vars.$fs-1;
+.navbar__loggedUser {
+  color: vars.$clr-primary;
+  font-weight: 500;
+  user-select: none;
+  cursor: not-allowed;
+}
+
+.navbar__loginBtn {
+  @include mixins.flexy(center, center);
+  gap: vars.$gutter-s;
+  padding-inline: vars.$gutter-s;
+  padding-block: 0.4rem;
+  border-radius: vars.$border-radius;
+  border: 2px solid vars.$clr-primary;
+  color: vars.$clr-primary;
+}
+
+.navbar__registerBtn {
+  background-color: vars.$clr-primary;
+  color: vars.$clr-white;
+  font-size: vars.$fs-0;
+  padding-inline: vars.$gutter-s;
+  padding-block: 0.4rem;
+  border-radius: vars.$border-radius;
+  @include mixins.my_transition(opacity);
+  @include mixins.flexy(center, center);
+  gap: vars.$gutter-s;
+
+  &:hover {
+    opacity: 0.8;
+  }
+
+  .navbar__logoutIcon {
+    font-size: vars.$fs-1;
+  }
 }
 
 @media (width <= 768px) {
