--- a/src/styles/components/ProductCard.scss
+++ b/src/styles/components/ProductCard.scss
@@ -19,6 +19,7 @@
 
 .product-card__image {
   width: 100%;
+  height: auto;
   aspect-ratio: 1 / 1;
   object-fit: cover;
   border-radius: vars.$border-radius;
