chore: fix login bug when persisting session.

--- a/src/styles/components/Products/ProductCard.scss
+++ b/src/styles/components/Products/ProductCard.scss
@@ -1,5 +1,5 @@
-@use "../variables" as vars;
-@use "../mixins" as mixins;
+@use "../../variables" as vars;
+@use "../../mixins" as mixins;
 
 .product-card {
   background-color: vars.$clr-white;
