--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,7 +3,7 @@ $clr-white: hsl(40, 60%, 97%);
 $clr-cream: #f9f4e8;
 $clr-gray: #e9dfd3;
 $clr-black: #212121;
-$clr-primary: hsl(29, 29%, 45%);
+$clr-primary: hsl(29, 29%, 41%);
 $clr-secondary: hsl(39, 59%, 15%); //#6c969d
 $clr-error: #fe4a49; //#6c969d
 
@@ -26,7 +26,7 @@ $gutter-l: clamp(1.75rem, 1.6943rem + 0.2548vi, 2rem);
 $gutter-xl: clamp(2.625rem, 2.5414rem + 0.3822vi, 3rem);
 $gutter-2xl: clamp(3.5rem, 3.3885rem + 0.5096vi, 4rem);
 
-$padding-x: $gutter-2xl;
+$padding-x: calc($gutter-2xl * 2);
 
 // Dimensions
 $nav-height: 4.5rem;
